--- a/gmall-cart-web/src/main/resources/static/success.html
+++ b/gmall-cart-web/src/main/resources/static/success.html
@@ -18,7 +18,7 @@
         <div class="hd_wrap_top">
         <ul class="hd_wrap_left">
         <li class="hd_home"><i class="glyphicon glyphicon-home"></i>
-        <a href="/javascript:;">京东首页</a>
+        <a href="http://localhost:8083/index">首页</a>
         </li>
 
         </ul>
@@ -46,7 +46,7 @@
 
         <div class="nav_top">
         <div class="nav_top_one">
-        <a href="/#"><img src="/img/logo1.jpg"  style="height: 60px;width:180px;"  /></a>
+        <a href="http://localhost:8083/index"><img src="/img/logo1.jpg"  style="height: 60px;width:180px;"  /></a>
         </div>
         <div class="nav_top_two"><input type="text" /><button>搜索</button></div>
 
@@ -67,16 +67,16 @@
         <div class="mc success-cont">
         <div class="success-lcol">
         <div class="success-top"><b class="succ-icon"></b>
-        <h3 class="ftx-02">商品已成功加入购物车</h3></div>
+            <h3 class="ftx-02">商品已成功加入购物车</h3></div>
     <div class="p-item">
         <div class="p-img">
-        <a href="/javascript:;" target="_blank"><img style="height: 60px;width:60px;"  th:src="${skuInfo?.skuDefaultImg}" src="/img/shop1.jpg"></a>
+        <a th:href="${skuInfo?.skuDefaultImg}" target="_blank"><img style="height: 60px;width:60px;"  th:src="${skuInfo.skuDefaultImg}" src="/img/shop1.jpg"></a>
         </div>
         <div class="p-info">
         <div class="p-name">
-        <a th:href="'http://item.gmall.com/'+${skuInfo?.id}+'.html'"  th:text="${skuInfo?.skuName}"  >TCL 55A950C 55英寸32核人工智能 HDR曲面超薄4K电视金属机身（枪色）</a>
+        <a th:href="'http://localhost:8082/'+${skuInfo.id}+'.html'"  th:text="${skuInfo.skuName}"  >TCL 55A950C 55英寸32核人工智能 HDR曲面超薄4K电视金属机身（枪色）</a>
     </div>
-    <div class="p-extra"> <span class="txt" th:text="'数量：'+${skuNum}" >  数量：1</span></div>
+    <div class="p-extra"> <span class="txt" th:text="'数量：'+${quantity}" >  数量：1</span></div>
     </div>
     <div class="clr"></div>
         </div>
@@ -87,8 +87,8 @@
         </div>
         <div class="clr"></div>
         <div class="bg_shop">
-        <a class="btn-tobback" th:href="'http://item.gmall.com:8084/'+${skuInfo?.id}+'.html'">查看商品详情</a>
-        <a class="btn-addtocart"  href="http://cart.gmall.com:8087/cartList" id="GotoShoppingCart"><b></b>去购物车结算</a>
+        <a class="btn-tobback" th:href="'http://localhost:8082/'+${skuInfo.id}+'.html'">查看商品详情</a>
+        <a class="btn-addtocart"  href="http://localhost:8084/cartList" id="GotoShoppingCart"><b></b>去购物车结算</a>
    </div>
     </div>
     </div>
